# ai-300-p009-classwork

./: README.md
Class_02/Part_03/: CLAUDE.md
Class_02/Part_1/: markdown_basics_guide.md
class_02/markdown-formating/: CLAUDE.md  MARKDOWN_BASICS.md  read.md
class_02/part_01/: read.md
class_02/part_03/: CLAUDE.md  recipesapple_cinnamon_overnight_oats.md
class_03/: CLAUDE.md
class_03/lessons/: lesson_1.md  lesson_1.txt
class_04/: CLAUDE.md
class_09/: mypy.ini  pyproject.toml  pytest.ini
class_09/.specify/memory/: constitution.md
class_09/history/prompts/001-cli-calculator/: 001-generate-tasks-for-cli-calculator.tasks.prompt.md  1-create-implementation-plan.plan.prompt.md  1-implement-phase-1-2.implementation.prompt.md  3-implement-phase-3-4.implementation.prompt.md  5-implement-phase-5-6.implementation.prompt.md
class_09/history/prompts/constitution/: 1-create-python-calculator-constitution.constitution.prompt.md
class_09/history/prompts/general/: 002-git-commit-and-pr-creation-for-task-generation.general.prompt.md  2-cli-calculator-spec-.spec.prompt.md  2-git-workflow-cli-calculator-phase-1-2.refactor.prompt.md  2-git-workflow-commit-pr.general.prompt.md  4-git-workflow-cli-calculator-phase-3-4.refactor.prompt.md
class_09/specs/001-cli-calculator/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
class_09/specs/001-cli-calculator/contracts/: cli-interface.md
class_09/src/calculator/: cli.py  core.py
class_09/tests/integration/: test_calculator_cli.py
class_09/tests/unit/: test_calculator.py
class_11/: spec.md
(+18 files in other folders)
